<resources>
    <string name="_3_days_trial">3 DAYS TRIAL</string>
    <string name="_3_months">3 MONTHS</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="active_ultra_boost_ad_id" />
    <string name="active_ultra_boost_ad_id_test">ca-app-pub-3940256099942544/5224354917</string>
    <string name="active_ultraboost">ACTIVATE</string>
    <string name="ad_attribution">Ad</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="after_boosting_fullscreen_ad_id" />
    <string name="after_boosting_fullscreen_ad_id_test">ca-app-pub-3940256099942544/1033173712</string>
    <string name="agree_to_privacy_policy">privacy policy</string>
    <string name="agree_to_term_and_privacy">I agree to the term of use and privacy policy</string>
    <string name="agree_to_term_of_use">term of use</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app">App</string>
    <string name="app_boost_error">There is an error occurred while application trying to open</string>
    <string name="app_boosted">is boosted</string>
    <string name="app_boosted_error">There is an error occurred while application trying to open</string>
    <string name="app_name">NovaBoost</string>
    <string name="app_short_description">"NovaBoost - Ultimate Gaming Performance Suite"</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_agree_message">Please press \"Continue\" if you choose to start using our app.</string>
    <string name="applovin_alt_privacy_policy_text" />
    <string name="applovin_continue_button_text">Continue</string>
    <string name="applovin_creative_debugger_disabled_text">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="applovin_creative_debugger_no_ads_text">No recently displayed ads found.</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="applovin_pp_and_tos_title">To use %s you must agree to our Terms &amp; Conditions and affirm you have reviewed our Privacy Policy</string>
    <string name="applovin_pp_title">To use %s you must affirm that you have reviewed and acknowledged our Privacy Policy.</string>
    <string name="applovin_privacy_policy_text">Privacy Policy</string>
    <string name="applovin_sdk_key" />
    <string name="applovin_terms_of_service_text">Terms &amp; Conditions</string>
    <string name="applovin_terms_of_use_text">Terms of Use</string>
    <string name="apps">Apps</string>
    <string name="boost">Boost</string>
    <string name="boost_completed_native_ad_id" />
    <string name="boost_completed_native_ad_id_test">ca-app-pub-3940256099942544/2247696110</string>
    <string name="boost_device_to_max_performance">to max performance</string>
    <string name="booster_first_step">Clear background cache to free up memory for gaming</string>
    <string name="booster_second_step">Activate 4X Game Space</string>
    <string name="boosting">Optimizing…</string>
    <string name="boosting_android_system">Optimizing…</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="buy">BUY</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="cleaned">Cleaned</string>
    <string name="cleaning_schedule">Cleaning Schedule</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_ads_support_dev">Support the app</string>
    <string name="close">Close</string>
    <string name="close_the_booster_app_and_open_your_game">Close app and open your game</string>
    <string name="coin">Coin</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="completed">Completed</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">News</string>
    <string name="default_web_client_id">161158537066-ekhdu4ducn1i57hirq3epanad5j7tvod.apps.googleusercontent.com</string>
    <string name="dialog_title">Optimizing…</string>
    <string name="did_you_like_the_app">Did you like the app?</string>
    <string name="enable_5_coin">Enable (5 Coin)</string>
    <string name="enhanced_experience_when_playing_games">Enhanced experience when playing games</string>
    <string name="enjoy_vip_exclusive_privileges_now_1">Enjoy VIP exclusive privileges now!</string>
    <string name="enjoy_vip_exclusive_privileges_now_2">No ads | Unlimited booster</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_loading_current_offering">Error loading current offering</string>
    <string name="fps_optimizer">AUTO BOOST</string>
    <string name="game_booster_vip">NOVABOOST VIP</string>
    <string name="game_is_optimized">Ready</string>
    <string name="game_optimizer">Game Optimizer</string>
    <string name="launch">Launch</string>
    <string name="learn_more">Learn More</string>
    <string name="monthly">1 MONTHS</string>
    <string name="native_main_image">native_main_image</string>
    <string name="native_privacy_information_icon_image">Privacy Information Icon image</string>
    <string name="no_ads">NO ADS</string>
    <string name="real_time_boost">REAL-TIME BOOST</string>
    <string name="recurring_billing_cancel_anytime">Recurring billing, cancel anytime</string>
    <string name="restart_now">RESTART NOW</string>
    <string name="scheduled_cleanup">UNLIMITED BOOSTER AND CONNECTION SPEED</string>
    <string name="subscription_notice">Subscription Notice:</string>
    <string name="subscription_notice_content_1">- After purchase confirmation, your payment will be charged to your Google Play account.</string>
    <string name="subscription_notice_content_2">"- Your subscription will automatically renew unless you cancel the subscription at least 24 hours prior to the end of of the current period. The payment of renewal will be charged to your account in 24 hours before your subscription expires, during a seven-day grace period, you won't lose your privileges and you can renew at anytime."</string>
    <string name="subscription_notice_content_3">- You can manage and cancel your subscription in settings in the Google Play store.</string>
    <string name="switch_now_to_the_vip_exclusive_version">Switch now to the VIP-exclusive version</string>
    <string name="this_is_a_premium_feature">This is a premium feature</string>
    <string name="twelve_months_off">42% OFF</string>
    <string name="unlock_enhanced_experience_for_free_btn">Unlock Enhanced Experience</string>
    <string name="vip_member">VIP MEMBER</string>
    <string name="watch_ads_to_active_enhanced_experience">View this ad to unlock enhanced experience when playing games in a day</string>
    <string name="yearly">12 MONTHS</string>
</resources>