<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:orientation="horizontal" android:id="@id/titleContainer" android:background="@color/colorPrimaryDark" android:layout_width="fill_parent" android:layout_height="?android:actionBarSize">
        <ImageView android:id="@id/backBtn" android:background="@android:color/transparent" android:paddingLeft="16.0dip" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="25.0dip" android:layout_centerVertical="true" android:layout_marginEnd="25.0dip" app:srcCompat="@drawable/ic_arrow_back" />
        <com.hanks.htextview.rainbow.RainbowTextView android:textSize="18.0sp" android:textStyle="bold" android:id="@id/boosterTitleStep1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/game_booster_vip" android:layout_centerInParent="true" app:colorSpace="150.0dip" app:colorSpeed="10.0dip" />
    </RelativeLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" app:srcCompat="@drawable/ic_checked" />
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="16.0sp" android:textColor="@color/textNormalColor" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/no_ads" android:layout_marginStart="8.0dip" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" app:srcCompat="@drawable/ic_checked" />
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="18.0sp" android:textColor="@color/textNormalColor" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/real_time_boost" android:layout_marginStart="8.0dip" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" app:srcCompat="@drawable/ic_checked" />
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="16.0sp" android:textColor="@color/textNormalColor" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/fps_optimizer" android:layout_marginStart="8.0dip" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" app:srcCompat="@drawable/ic_checked" />
                <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="16.0sp" android:textColor="@color/textNormalColor" android:ellipsize="end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/scheduled_cleanup" android:layout_marginStart="8.0dip" />
            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="8.0dip">
                <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/monthlyBtn" android:background="@color/colorPrimaryDark" android:padding="14.0dip" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginRight="8.0dip" app:layout_constraintBottom_toBottomOf="@id/yearlyBtn" app:layout_constraintEnd_toStartOf="@id/guideline" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/yearlyBtn">
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="16.0sp" android:textColor="@color/colorAccent" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/monthly" />
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="16.0sp" android:textColor="@color/textNormalColor" android:gravity="center" android:id="@id/oneMonthPrice" android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_marginBottom="8.0dip" android:layout_weight="1.0" />
                    <TextView android:textSize="16.0sp" android:textColor="@color/colorAccent" android:background="@drawable/bg_vip_text" android:paddingLeft="16.0dip" android:paddingTop="3.0dip" android:paddingRight="16.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/buy" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
                </LinearLayout>
                <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/yearlyBtn" android:background="@color/colorPrimaryDark" android:padding="14.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/guideline" app:layout_constraintTop_toTopOf="parent">
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="16.0sp" android:textColor="@color/colorAccent" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/yearly" />
                    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="16.0sp" android:textColor="@color/textNormalColor" android:id="@id/twelvePrice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" />
                    <com.hanks.htextview.rainbow.RainbowTextView android:textSize="16.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/twelve_months_off" app:colorSpace="150.0dip" app:colorSpeed="10.0dip" />
                    <TextView android:textSize="16.0sp" android:textColor="@color/colorAccent" android:background="@drawable/bg_vip_text" android:paddingLeft="16.0dip" android:paddingTop="3.0dip" android:paddingRight="16.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/buy" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" />
                </LinearLayout>
                <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.5" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="14.0sp" android:textColor="@color/textNormalColor" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/recurring_billing_cancel_anytime" />
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="14.0sp" android:textColor="@color/textNormalColor" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/subscription_notice" />
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="14.0sp" android:textColor="@color/textNormalColor" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/subscription_notice_content_1" />
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="14.0sp" android:textColor="@color/textNormalColor" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/subscription_notice_content_2" />
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="14.0sp" android:textColor="@color/textNormalColor" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/subscription_notice_content_3" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>