<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/bg_main" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Top Bar -->
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="16dp" android:paddingRight="16dp" android:paddingTop="16dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/backBtn" android:padding="8dp" android:layout_width="32dp" android:layout_height="32dp" android:layout_marginRight="12dp" android:layout_marginEnd="12dp" app:srcCompat="@drawable/ic_keyboard_backspace" android:tint="@color/accent_neon" />
        <TextView android:textSize="14sp" android:textColor="@color/accent_neon" android:id="@id/actionBarTitle" android:fontFamily="monospace" android:letterSpacing="0.15" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/game_optimizer" />
    </LinearLayout>
    <!-- Content -->
    <LinearLayout android:orientation="vertical" android:gravity="center" android:layout_width="fill_parent" android:layout_height="0dp" android:layout_weight="1">
        <com.airbnb.lottie.LottieAnimationView android:layout_gravity="center" android:id="@id/circleGrowAnim" android:layout_width="100dp" android:layout_height="100dp" android:layout_marginTop="20dp" app:lottie_autoPlay="true" app:lottie_fileName="animation-complete.json" app:lottie_loop="false" />
        <TextView android:textSize="10sp" android:textColor="@color/accent_neon" android:fontFamily="monospace" android:letterSpacing="0.15" android:gravity="center" android:id="@id/contentText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/game_is_optimized" />
        <Button android:textColor="#ff000000" android:textStyle="bold" android:textSize="13sp" android:fontFamily="monospace" android:letterSpacing="0.1" android:layout_gravity="center_horizontal" android:id="@id/launchAppBtn" android:background="@drawable/bg_cyber_button_glow" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="40dp" android:layout_marginRight="20dp" android:layout_marginBottom="32dp" android:text="@string/launch" android:paddingTop="14dp" android:paddingBottom="14dp" />
    </LinearLayout>
</LinearLayout>
