<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/closeBtn" android:background="@android:color/transparent" android:padding="3.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_alignParentRight="true" app:srcCompat="@drawable/ic_close" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginTop="10.0dip" android:src="@drawable/ic_diamond_unlock_for_free" android:scaleType="fitCenter" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="18.0sp" android:textColor="@color/textNormalColor" android:ellipsize="end" android:gravity="center" android:id="@id/boosterTitleStep1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/this_is_a_premium_feature" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textSize="18.0sp" android:textColor="@color/textNormalColor" android:ellipsize="end" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/watch_ads_to_active_enhanced_experience" />
        <LinearLayout android:gravity="center" android:layout_gravity="bottom" android:orientation="horizontal" android:id="@id/fixItBtn" android:background="@color/colorPrimaryDark" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip">
            <TextView android:textSize="18.0dip" android:textColor="@color/textNormalColor" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="16.0dip" android:text="@string/unlock_enhanced_experience_for_free_btn" android:layout_weight="1.0" android:textAllCaps="true" android:layout_marginEnd="16.0dip" />
            <ImageView android:background="@android:color/transparent" android:layout_width="35.0dip" android:layout_height="35.0dip" app:srcCompat="@drawable/ic_baseline_play_circle_outline_35" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>