<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/native_outer_view" android:background="@color/colorPrimaryDark" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textDirection="locale"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/native_icon_image" android:background="@null" android:layout_width="64.0dip" android:layout_height="64.0dip" android:layout_marginTop="10.0dip" android:layout_alignParentTop="true" android:contentDescription="@null" android:layout_marginStart="10.0dip" android:layout_alignParentStart="true" />
    <TextView android:textStyle="bold" android:textColor="@color/textNormalColor" android:id="@id/native_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:layout_alignParentTop="true" android:layout_marginStart="84.0dip" android:layout_alignParentStart="true" />
    <TextView android:textColor="@color/textNormalColor" android:id="@id/native_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/native_icon_image" android:layout_marginStart="10.0dip" android:layout_alignParentStart="true" />
    <ImageView android:id="@id/native_main_image" android:background="@null" android:layout_width="fill_parent" android:layout_height="@dimen/native_main_image_height" android:layout_marginTop="10.0dip" android:scaleType="centerCrop" android:layout_below="@id/native_text" android:contentDescription="@string/native_main_image" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" android:layout_alignParentStart="true" />
    <TextView android:textColor="@color/textNormalColor" android:id="@id/native_sponsored_text_view" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:layout_below="@id/native_main_image" android:layout_marginEnd="10.0dip" android:layout_toStartOf="@id/native_cta" android:layout_alignStart="@id/native_main_image" />
    <Button android:textColor="@color/black" android:id="@id/native_cta" android:background="@color/colorAccent" android:paddingLeft="3.0dip" android:paddingRight="3.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="@dimen/button_height" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/learn_more" android:layout_below="@id/native_main_image" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" />
    <ImageView android:id="@id/native_privacy_information_icon_image" android:padding="10.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_alignParentTop="true" android:contentDescription="@string/native_privacy_information_icon_image" android:layout_alignParentEnd="true" />
</RelativeLayout>